--- a/presentacion.tex
+++ b/presentacion.tex
@@ -557,7 +557,7 @@ Montevideo, Uruguay}
 		\begin{itemize}
 			\item \textbf{p$\mu$MOEA/D}: %30 ejecuciones de 20000 generaciones sobre 4 instancias. \\
 			{\small $\#P=15$; selección por torneo ($m=2,k=1$); migración cada 1000 generaciones reemplazando a los peores individuos\\
-			$p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$}\\
+			$p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$}\\\pause
 			\item \textbf{NSGA--II}: %30 ejecuciones de 5000 generaciones sobre 4 instancias. \\
 			{\small $\#P=80$; selección por torneo ($m=2,k=1$);\\
 			$p_C \in \lbrace 0.6, \alert{0.75}, 0.95\rbrace$; $p_M \in \lbrace 0.001, 0.01, \alert{0.1}\rbrace$.}\\
@@ -699,9 +699,11 @@ Montevideo, Uruguay}
 }
 
 \frame{
-	\frametitle{Trabajo futuro}
+	\frametitle{Fin}
 	\centering
-	\huge Gracias
+	{\huge Gracias}
+	\vspace{5cm}
+	Sitio web del proyecto: \url{www.fing.edu.uy/inco/grupos/cecal/hpc/AG-Taxi/}
 	
 }
 
