Cambios seccion implementacion

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -366,7 +366,7 @@ Montevideo, Uruguay}
 	\pause
 	\begin{columns}[totalwidth=\textwidth]
 	\column{0.65\textwidth}
-		\begin{block}{MOEA con Descomposición de Dominio (\textit{p$\mu$MOEA/D})}
+		\begin{block}{MOEA paralelo con micro--población y descomposición de dominio (\textit{p$\mu$MOEA/D})}
 		%Micro--poblaciones distribuidas con
 		Agregación lineal de los objetivos:
 		\\\hspace{1.5cm}$F = w_C\times CT + w_D \times DT$, \small \\\hspace{2.3cm}{\tiny$w_C = [0:\frac{1}{\#islas}:1]$, $w_D = 1 - w_C$}.
@@ -378,7 +378,7 @@ Montevideo, Uruguay}
 	\end{columns}
 	\pause
 
-	\begin{block}{MOEA Explícito (\textit{NSGA--II})}
+	\begin{block}{MOEA explícito (\textit{NSGA--II})}
 		Ordenamiento no--dominado (elitista), \textit{crowding} para preservar diversidad.
 	\end{block}
 }
