--- a/presentacion.tex
+++ b/presentacion.tex
@@ -314,14 +314,14 @@ Montevideo, Uruguay}
 
 \frame{
 	\frametitle{AE para el PVCT monoobjetivo}
-	\begin{block}{AE Secuencial \textit{(seqEA)}}
+	\begin{block}{AE secuencial \textit{(seqEA)}}
 		\begin{itemize}
 			\item Selección proporcional.
 		\end{itemize}
 	\end{block}
 	\pause
 
-	\begin{block}{AE Paralelo (\textit{p$\mu$EA})}
+	\begin{block}{AE paralelo (\textit{p$\mu$EA})}
 		\begin{itemize}
 %			\item Modelos paralelos.
 %			\begin{itemize}
