Cambios en complejidad

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -188,11 +188,9 @@ Montevideo, Uruguay}
 		\item Solución al problema de compartir vehículos en el trabajo.
 	\end{itemize}
 	
-	\item Caso especial del \textit{Vehicle Routing Problem (VRP)} con demanda unitaria:
-	\begin{itemize}
-		\item Letcheford et al. (2002) demostró que es $\mathcal{NP}$--difícil.
-	\end{itemize}
-	\item Similitudes determinan que nuestro problema también es $\mathcal{NP}$--difícil.
+	\item Caso especial del \textit{Vehicle Routing Problem (VRP)} con demanda unitaria: $\mathcal{NP}$--difícil [Letcheford et al. (2002)].
+	%\item Similitudes determinan que nuestro problema también es $\mathcal{NP}$--difícil.
+	\item El PVCT tiene grandes similitudes con el CPP.
 	\end{itemize}
 	\end{block}
 
