--- a/presentacion.tex
+++ b/presentacion.tex
@@ -492,7 +492,7 @@ Montevideo, Uruguay}
 	
 	Mejoras en \textbf{todas} las instancias sobre el algoritmo ávido (hasta \alert{35.9\%}).
 
-	\small{\textit{``Online taxi sharing optimization using evolutionary algorithms, CLEI, 2014''}}
+	\small{\textit{``Online taxi sharing optimization using evolutionary algorithms'' (CLEI)}}
 
 }
 
@@ -502,7 +502,7 @@ Montevideo, Uruguay}
 	
 	Mejoras en \textbf{todas} las instancias sobre el algoritmo ávido (hasta \alert{41.0\%}).
 
-	\small{\textit{``A parallel micro evolutionary algorithm for taxi sharing optimization, ALIO''}}
+	\small{\textit{``A parallel micro evolutionary algorithm for taxi sharing optimization'' (ALIO)}}
 }
 
 \frame{
@@ -569,14 +569,14 @@ Montevideo, Uruguay}
 \frame{
 	\frametitle{Resultados numéricos}
 		
-	\begin{block}{\scriptsize{\textit{p$\mu$MOEA/D}:} \scalebox{.7}{``Planificación multiobjetivo de viajes compartidos en taxis utilizando un micro algoritmo evolutivo paralelo'' (MAEB)}}
+	\begin{block}{\scriptsize{\textit{p$\mu$MOEA/D: \scalebox{.7}{``Planificación multiobjetivo de viajes compartidos en taxis utilizando un micro algoritmo evolutivo paralelo'' (MAEB)}}}}
 	Hasta \alert{101.2\%} de mejora en demora y \alert{72.8\%} en costo sobre ávidos.\pause
 		
 		\input{./evaluacion_experimental/metricas_mo_resumen_maeb.tex}
 		\small{Buena convergencia y diversidad. Pocas soluciones no dominadas.}
 	\end{block}
 	\pause
-	\begin{block}{\scriptsize{\textit{NSGA--II:}} \tiny{``Multiobjective taxi sharing optimization using the NSGA-II evolutionary algorithm'' (MIC)}}
+	\begin{block}{\scriptsize{\textit{NSGA--II: \tiny{``Multiobjective taxi sharing optimization using the NSGA-II evolutionary algorithm'' (MIC)}}}}
 		Hasta \alert{105.2\%} de mejora en demora y \alert{75.1\%} en costo sobre ávidos.\pause
 		
 		\input{./evaluacion_experimental/metricas_mo_resumen_mic.tex}
