Saco pausas en future work

--- a/presentacion.tex
+++ b/presentacion.tex
@@ -681,21 +681,21 @@ Montevideo, Uruguay}
 	\frametitle{Trabajo futuro}
 	\begin{block}{Mejoras en los AE}
 	\begin{itemize}
-		\item Implementar NSGA--II con subpoblaciones distribuidas.\pause
-		\item Incorporar \textbf{datos realistas del tráfico}.\pause
-		\item Incorporar datos de la \textbf{disponibilidad de los taxis} en tiempo real.\pause
+		\item Implementar NSGA--II con subpoblaciones distribuidas.
+		\item Incorporar \textbf{datos realistas del tráfico}.
+		\item Incorporar datos de la \textbf{disponibilidad de los taxis} en tiempo real.
 	\end{itemize}
-	\end{block}
+	\end{block}\pause
 	\begin{block}{Mejoras en el planificador de viajes compartidos}
 	\begin{itemize}
-		\item Mejorar la experiencia de usuario.\pause
-		\item Desarrollar versiones para Android y Windows Phone.\pause
-		\item Soportar la variante multiobjetivo.\pause
+		\item Mejorar la experiencia de usuario.
+		\item Desarrollar versiones para Android y Windows Phone.
+		\item Soportar la variante multiobjetivo.
 	\end{itemize}
-	\end{block}
+	\end{block}\pause
 	\begin{block}{Problemas relacionados}
 	\begin{itemize}
-	\item Estudiar otras variantes del problema (many--to--one, many--to--many).\pause
+	\item Estudiar otras variantes del problema (many--to--one, many--to--many).
 	\item Estudiar la aplicabilidad de los AE a otros escenarios.
 	\end{itemize}
 	\end{block}
